--- a/Задание 2 (CSS)/Вариант 8/index.html
+++ b/Задание 2 (CSS)/Вариант 8/index.html
@@ -7,11 +7,29 @@
 </head>
 <body>
 <div class="container">
-    <div class="variant"></div>
-    <div class="variant"></div>
-    <div class="variant"></div>
-    <div class="variant"></div>
-    <div class="variant"></div>
+    <ul class="slider">
+        <li>
+            <input type="radio" id="slide1" name="slide" checked>
+            <label for="slide1"></label>
+            <img src="https://4.img-dpreview.com/files/p/E~TS590x0~articles/3925134721/0266554465.jpeg" alt="Panel 1">
+        </li>
+        <li>
+            <input type="radio" id="slide2" name="slide">
+            <label for="slide2"></label>
+            <img src="https://www.fujifilm.eu/fileadmin/product_migration/dc/samples/ff_x20_008_02.JPG" alt="Panel 2">
+        </li>
+        <li>
+            <input type="radio" id="slide3" name="slide">
+            <label for="slide3"></label>
+            <img src="https://kbob.github.io/images/sample-5.jpg" alt="Panel 3">
+        </li>
+        <li>
+            <input type="radio" id="slide4" name="slide">
+            <label for="slide4"></label>
+            <img src="https://cdn.pixabay.com/photo/2015/06/19/17/58/sample-815141_960_720.jpg" alt="Panel 4">
+        </li>
+    </ul>
+
 </div>
 </body>
 </html>
